[tool.poetry]
name = "aiocpxo"
version = "0.1.0"
description = ""
authors = ["JackLPK <59538991+JackLPK@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cpxo = "aiocpxo.cli:cli"
aiocpxo = "aiocpxo.cli:shortcut_async"